# snoozebox-py

./: .gitignore  LICENSE  README.md  default_settings.toml  pyproject.toml
resources/: video_link.txt
samples/audio_archiver/: Dockerfile  config.toml  docker-compose.yml  protogen.sh  pyproject.toml  requirements.txt  test.sh
samples/audio_archiver/audio_archiver/: main.py
samples/audio_archiver/audio_archiver/connection/: pg_connection.py  redis_connection.py
samples/audio_archiver/audio_archiver/logic/audio/: extraction.py
samples/audio_archiver/audio_archiver/logic/handlers/: audio_handler.py  channel_handler.py
samples/audio_archiver/audio_archiver/logic/handlers/handler_utils/: crud_handler_component.py  generic_tools.py  utils_handler_component.py
samples/audio_archiver/audio_archiver/logic/protogen/: audio_pb2_grpc.py  channel_pb2_grpc.py
samples/audio_archiver/audio_archiver/models/: audio.py  channel.py
samples/audio_archiver/audio_archiver/models/model_utils/: relations.py
samples/audio_archiver/audio_archiver/protogen/: audio_pb2_grpc.py  channel_pb2.py  channel_pb2_grpc.py
samples/audio_archiver/audio_archiver/service/frontend/: flask_templates.py
samples/audio_archiver/audio_archiver/service/frontend/templates/: index.html
samples/audio_archiver/audio_archiver/service/grpc/: grpc_main.py
samples/audio_archiver/audio_archiver/service/grpc/routes/: audio_routes.py  channel_routes.py
samples/audio_archiver/audio_archiver/utils/: config.py  logging.py
samples/audio_archiver/data/redis/: dump.rdb
samples/audio_archiver/proto/: audio.proto  channel.proto
samples/audio_archiver/tests/: __init__.py  test_audio_archiver.py
samples/audio_archiver/tests/dummy_data/: audio_dummy_data.sql  channel_dummy_data.sql  dummy_data_execution.py
samples/audio_archiver/tests/test_connection/: test_connection.py
samples/audio_archiver/tests/test_grpc/: README.md  pyproject.toml  run_tests.sh
samples/audio_archiver/tests/test_grpc/proto/: audio.proto  channel.proto
samples/audio_archiver/tests/test_grpc/test_grpc/: main.py
samples/audio_archiver/tests/test_grpc/test_grpc/client/: audio.py  channel.py
samples/audio_archiver/tests/test_grpc/test_grpc/protogen/: audio_pb2.py  channel_pb2.py
samples/audio_archiver/tests/test_grpc/test_grpc/utils/: config.py
samples/audio_archiver/tests/test_grpc/tests/: test_audio.py  test_channel.py
samples/audio_archiver/tests/test_logic/: test_audio_handler.py  test_channel_handler.py
snoozebox_py/: cli.py  jinja_setup.py  main.py  prompt.py
snoozebox_py/snoozefile/: snoozefile.py
snoozebox_py/utils/: config.py  custom_errors.py  pathing.py  poetry_exec.py
snoozelib/: pyproject.toml
snoozelib/snoozelib/: __init__.py  checks.py  conversion.py  custom_exceptions.py  data_types.py  general.py  grpc.py  grpc_variable.py  import_instruction.py  interpret.py  main.py  relations.py
snoozelib/tests/: test_snoozelib.py
tests/: test_snoozebox_py.py
