[tool.poetry]
name = "snoozebox-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
pipe = "^1.6.0"
snoozelib = {path = "snoozelib/dist/snoozelib-0.0.0a8-py3-none-any.whl"}
rtoml = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
