[tool.poetry]
name = "snoozelib"
version = "0.0.0a43"
description = "Library for snoozebox CLI tool"
authors = ["mutestock"]
license="MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
