[tool.poetry]
name = "audio_archiver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.45.0"
grpcio-tools = "^1.45.0"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.35"
toml = "^0.10.2"
redis = "^4.2.2"
ffmpeg-python = "^0.2.0"
youtube_dl = "^2021.12.17"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
